--- a/_posts/2019-07-04-the-us-narrative-today.html
+++ b/_posts/2019-07-04-the-us-narrative-today.html
@@ -2548,107 +2548,107 @@ stories:
   domain: http://www.morganmessenger.com/
   link: https://www.morganmessenger.com/2019/07/03/main-street-hancock-group-takes-shape-with-second-meeting/
 images:
-- name: meadowbutterfly-meadow-butterfly-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-blue-electricity.jpg
-- name: ellis-island-ellisisland-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-atari-missle.jpg
-- name: school-clouds-church-clouds-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-purple-storm.jpg
-- name: ellis-island-ellisisland-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-emily-carr.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-plentiful.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-plentiful.JPG
-- name: border-fence-border-fence-on-hill-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-dark-soul.jpg
-- name: flower-barbed-wire-flower-barbed-wire-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-dark-soul.jpg
-- name: old-granary-field-granaryfield-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-space-pizza.jpg
-- name: dragon-desert-desert-dragon-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-mucha-mult.jpg
-- name: crow-crow-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-dry-skin.jpg
-- name: liberty-back-statue-liberty-back-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-dali-two.jpg
-- name: aws-s3-stories-new-69-120-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-69-120-800-500-0-max-0-1--1.jpg
-- name: white-house-lawn-white-house-lawn-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-internet-numbers.jpg
-- name: old-cabin-oldcabin-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-ww2-color.jpg
-- name: old-door-lock-old-door-lock-2-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-rainbow-festival.jpg
-- name: adam-smith-adam-smith-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-neo-instinct.jpg
-- name: aws-s3-stories-christianity-under-construction-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-christianity-under-construction-atari-asteroids.jpg
-- name: crow-crow-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-colorful-blocks.jpg
-- name: miamibeach-miamibeach-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-dark-soul.jpg
-- name: subway-subway-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-crunch-paper.jpg
-- name: border-crossing-bordercrossing-blue-circuit.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-blue-circuit.png
-- name: old-door-lock-old-door-lock-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-crunch-paper.jpg
-- name: yosemite-yosemite-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-crafty-painting.jpg
-- name: oldhouse-oldhouse-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-gan-vogh.jpg
-- name: flower-barbed-wire-flower-barbed-wire-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-blue-circuit-5.jpg
-- name: downtheline-downtheline-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-alberto-giacometti.jpg
-- name: eduardo-eduardo-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-post-modern.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-wols.jpg
-- name: trucksilo-trucksilo-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-really-hot.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-satan-red.jpg
-- name: oldcabin-oldcabin-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-smooth-ride.jpg
-- name: oldhouse-granaryfield-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-sunday.jpg
-- name: oldsmallboat-oldsmallboat-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-hot-spicy.jpg
-- name: trucksilo-trucksilo-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-atari-missle.jpg
-- name: christianity-christianity-under-construction-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-copper-circuit.jpg
-- name: oldtrain-oldtrain-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-dry-skin.jpg
-- name: oldsmallboat-oldsmallboat-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-deep-connections.jpg
-- name: supreme-court-supremecourt-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-free-woman.jpg
-- name: paris-paris-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-dry-skin.jpg
-- name: store-on-corner-oldcabin-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-colorful-dream.jpg
-- name: aws-s3-stories-new-72-124-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-72-124-800-500-0-max-0--1--1.jpg
-- name: walled-garden-walled-garden-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-blue-brush.jpg
-- name: capital-battle-capitolbattle-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-ww2-dresden.jpg
-- name: oldcabin-store-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-dali-three.jpg
-- name: store-on-corner-store-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-clean-view.jpg
-- name: server-cloud-server-racks-clouds-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-purple-pond.jpg
-- name: old-door-lock-old-door-lock-2-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-blue-brush.jpg
-- name: berlinwall-DSC-0084-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-dali-three.jpg
-- name: berlinwall-DSC-0084-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-hot-spicy.jpg
-- name: fence-fence-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-aqua.jpg
-- name: razorwire-DSC-0080-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-blue-brush.jpg
+- name: aws-s3-square-C2plAIxWIAAOSdD-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C2plAIxWIAAOSdD-square.jpg
+- name: statue-of-liberty-front-view-statueofliberty-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-dark-soul.jpg
+- name: curtain-curtain-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-umberto-bocc.jpg
+- name: windowmountain-window-mountain-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-umberto-bocc.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-jap-dys-1.jpg
+- name: san-francisco-street-view-san-francisco-street-view-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-rainbow-festival.jpg
+- name: oldhotel-oldhotel-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-sand-paper.jpg
+- name: gypsy-wagon-gypsywagon-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-dali-two.jpg
+- name: mosaic-face-mosaic-face-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-graham-sutherland.jpg
+- name: docks-docks-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-rainbow-festival.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-diego-rivera1.jpg
+- name: docks-docks-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-colored-circuits.jpg
+- name: catacombs-catacombs-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-diego-rivera1.jpg
+- name: wind-mills-windmills-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-creativity.jpg
+- name: trucksilo-trucksilo-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-atari-asteroids.jpg
+- name: old-school-house-old-schoolhouse-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-creativity.jpg
+- name: meadowbutterfly-meadow-butterfly-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-gan-vogh.jpg
+- name: berlinwall2-berlinwall-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-deep-connections.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-blue-brush.jpg
+- name: border-crossing-bordercrossing-colorful-dream.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-colorful-dream.png
+- name: old-church-oldchurch-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-atari-asteroids.jpg
+- name: machine-road-machine-road-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-cinnamon-rolls.jpg
+- name: razorcliff-razorcliff-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-ww2-dresden.jpg
+- name: white-house-lawn-white-house-window-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-monet-one.jpg
+- name: san-francisco-street-view-san-francisco-street-view-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-copper-circuit.jpg
+- name: old-door-lock-old-door-lock-2-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-deep-connections.jpg
+- name: statue-of-liberty-front-view-statueofliberty-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-dali-three.jpg
+- name: old-granary-field-granaryfield-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-green-zuma.jpg
+- name: window-window-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-far-away.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-deep-connections.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-deep-connections.JPG
+- name: statue-face-open-mouth-statue-face-open-mouth-aqua.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-aqua.png
+- name: liberty-back-statue-liberty-back-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-purple-storm.jpg
+- name: ellis-island-ellis-island-room-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-kandinsky-bv.jpg
+- name: san-francisco-street-view-san-francisco-street-view-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-sand-paper.jpg
+- name: server-cloud-server-racks-clouds-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-internet-numbers.jpg
+- name: downtown-los-angeles-downtown-la-post-modern.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-post-modern.JPG
+- name: razorwire-DSC-0080-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-kandinsky-bv.jpg
+- name: gears-4882162452-fa3126b38d-b-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-bright-sand.jpg
+- name: catacombs-catacombs-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-satan-red.jpg
+- name: machine-road-machine-road-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-monet-one.jpg
+- name: server-cloud1-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-feed-people.jpg
+- name: aws-s3-stories-new-cityscape-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-cityscape-copper-circuit.jpg
+- name: beach-clouds-lifeguard-beachclouds-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-sunday.jpg
+- name: border-fence-border-fence-on-hill-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-far-away.jpg
+- name: cargo-ship-cargo-ship-on-sea-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-rainbow-festival.jpg
+- name: san-francisco-street-view-san-francisco-street-view-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-smooth-ride.jpg
+- name: mediterranean-mediterranean-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-internet-numbers.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-china-prop.jpg
+- name: walled-garden-walled-garden-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-attack-planes.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-crafty-painting.jpg
+- name: old-gas-pumps-oldgaspumps-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-diego-rivera1.jpg
 ---
 Sophie Turner And Joe Jonas Share Wedding Photo.&nbsp;Good To Shuck On Retirement.&nbsp;Going With The Gray.&nbsp;Avicii's Family Don't Think His Death Was 'planned'.&nbsp;Why Do Credit Cards Offer Sign Up Bonus Deals To Attract New Customers.&nbsp;July Book Buzz Is Out Of This World.&nbsp;Ways To Save Even More This Prime Day.&nbsp;Warehouse Blaze Engulfs 45,000 Barrels Of Liquor.&nbsp;
